SignalTemporalLogic/SignalTemporalLogicParser.py
# Generated from /Users/josie/PrivateSTLLearning/SignalTemporalLogic/SignalTemporalLogic.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SignalTemporalLogicParser ( Parser ):

    grammarFileName = "SignalTemporalLogic.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'const'", "'int'", "'double'", "'bool'", 
                     "','", "';'", "'('", "')'", "'['", "']'", "'U'", "'F'", 
                     "'G'", "'true'", "'false'", "'&'", "'|'", "'->'", "'!'", 
                     "'='", "'!='", "'>'", "'>='", "'<'", "'<='", "<INVALID>", 
                     "<INVALID>", "'?'" ]

    symbolicNames = [ "<INVALID>", "CONST", "INT", "DOUBLE", "BOOL", "COMMA", 
                      "SEMICOLON", "LPAR", "RPAR", "LBRAT", "RBRAT", "U", 
                      "F", "G", "TRUE", "FALSE", "AND", "OR", "IMPLIES", 
                      "NOT", "EQ", "NEQ", "GT", "GE", "LT", "LE", "INTEGER", 
                      "FLOAT", "MISSING", "ID", "NEWLINE", "COMMENT", "WS" ]

    RULE_evl = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_declaration = 3
    RULE_boolExpr = 4
    RULE_stlTerm = 5
    RULE_timeBound = 6
    RULE_booelanAtomic = 7
    RULE_relationalExpr = 8
    RULE_atomic = 9

    ruleNames =  [ "evl", "statementList", "statement", "declaration", "boolExpr", 
                   "stlTerm", "timeBound", "booelanAtomic", "relationalExpr", 
                   "atomic" ]

    EOF = Token.EOF
    CONST=1
    INT=2
    DOUBLE=3
    BOOL=4
    COMMA=5
    SEMICOLON=6
    LPAR=7
    RPAR=8
    LBRAT=9
    RBRAT=10
    U=11
    F=12
    G=13
    TRUE=14
    FALSE=15
    AND=16
    OR=17
    IMPLIES=18
    NOT=19
    EQ=20
    NEQ=21
    GT=22
    GE=23
    LT=24
    LE=25
    INTEGER=26
    FLOAT=27
    MISSING=28
    ID=29
    NEWLINE=30
    COMMENT=31
    WS=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class EvlContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.StatementListContext,0)


        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_evl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEvl" ):
                listener.enterEvl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEvl" ):
                listener.exitEvl(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitEvl" ):
                return visitor.visitEvl(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def evl(self):

        localctx = SignalTemporalLogicParser.EvlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_evl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 20
            self.statementList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.NEWLINE)
            else:
                return self.getToken(SignalTemporalLogicParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SignalTemporalLogicParser.StatementContext)
            else:
                return self.getTypedRuleContext(SignalTemporalLogicParser.StatementContext,i)


        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitStatementList" ):
                return visitor.visitStatementList(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def statementList(self):

        localctx = SignalTemporalLogicParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SignalTemporalLogicParser.NEWLINE:
                self.state = 22
                self.match(SignalTemporalLogicParser.NEWLINE)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 29 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 28
                self.statement()
                self.state = 31 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SignalTemporalLogicParser.CONST) | (1 << SignalTemporalLogicParser.LPAR) | (1 << SignalTemporalLogicParser.F) | (1 << SignalTemporalLogicParser.G) | (1 << SignalTemporalLogicParser.TRUE) | (1 << SignalTemporalLogicParser.FALSE) | (1 << SignalTemporalLogicParser.NOT) | (1 << SignalTemporalLogicParser.INTEGER) | (1 << SignalTemporalLogicParser.FLOAT) | (1 << SignalTemporalLogicParser.MISSING) | (1 << SignalTemporalLogicParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.DeclarationContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.NEWLINE)
            else:
                return self.getToken(SignalTemporalLogicParser.NEWLINE, i)

        def boolExpr(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.BoolExprContext,0)


        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def statement(self):

        localctx = SignalTemporalLogicParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 45
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SignalTemporalLogicParser.CONST]:
                self.enterOuterAlt(localctx, 1)
                self.state = 33
                self.declaration()
                self.state = 35 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 34
                    self.match(SignalTemporalLogicParser.NEWLINE)
                    self.state = 37 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SignalTemporalLogicParser.NEWLINE):
                        break

                pass
            elif token in [SignalTemporalLogicParser.LPAR, SignalTemporalLogicParser.F, SignalTemporalLogicParser.G, SignalTemporalLogicParser.TRUE, SignalTemporalLogicParser.FALSE, SignalTemporalLogicParser.NOT, SignalTemporalLogicParser.INTEGER, SignalTemporalLogicParser.FLOAT, SignalTemporalLogicParser.MISSING, SignalTemporalLogicParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.boolExpr()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 40
                    self.match(SignalTemporalLogicParser.NEWLINE)
                    self.state = 43 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==SignalTemporalLogicParser.NEWLINE):
                        break

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONST(self):
            return self.getToken(SignalTemporalLogicParser.CONST, 0)

        def DOUBLE(self):
            return self.getToken(SignalTemporalLogicParser.DOUBLE, 0)

        def ID(self):
            return self.getToken(SignalTemporalLogicParser.ID, 0)

        def SEMICOLON(self):
            return self.getToken(SignalTemporalLogicParser.SEMICOLON, 0)

        def EQ(self):
            return self.getToken(SignalTemporalLogicParser.EQ, 0)

        def INTEGER(self):
            return self.getToken(SignalTemporalLogicParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(SignalTemporalLogicParser.FLOAT, 0)

        def INT(self):
            return self.getToken(SignalTemporalLogicParser.INT, 0)

        def BOOL(self):
            return self.getToken(SignalTemporalLogicParser.BOOL, 0)

        def TRUE(self):
            return self.getToken(SignalTemporalLogicParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(SignalTemporalLogicParser.FALSE, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def declaration(self):

        localctx = SignalTemporalLogicParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declaration)
        self._la = 0 # Token type
        try:
            self.state = 71
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 47
                self.match(SignalTemporalLogicParser.CONST)
                self.state = 48
                self.match(SignalTemporalLogicParser.DOUBLE)
                self.state = 49
                self.match(SignalTemporalLogicParser.ID)
                self.state = 52
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SignalTemporalLogicParser.EQ:
                    self.state = 50
                    self.match(SignalTemporalLogicParser.EQ)
                    self.state = 51
                    _la = self._input.LA(1)
                    if not(_la==SignalTemporalLogicParser.INTEGER or _la==SignalTemporalLogicParser.FLOAT):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 54
                self.match(SignalTemporalLogicParser.SEMICOLON)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 55
                self.match(SignalTemporalLogicParser.CONST)
                self.state = 56
                self.match(SignalTemporalLogicParser.INT)
                self.state = 57
                self.match(SignalTemporalLogicParser.ID)
                self.state = 60
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SignalTemporalLogicParser.EQ:
                    self.state = 58
                    self.match(SignalTemporalLogicParser.EQ)
                    self.state = 59
                    self.match(SignalTemporalLogicParser.INTEGER)


                self.state = 62
                self.match(SignalTemporalLogicParser.SEMICOLON)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 63
                self.match(SignalTemporalLogicParser.CONST)
                self.state = 64
                self.match(SignalTemporalLogicParser.BOOL)
                self.state = 65
                self.match(SignalTemporalLogicParser.ID)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SignalTemporalLogicParser.EQ:
                    self.state = 66
                    self.match(SignalTemporalLogicParser.EQ)
                    self.state = 67
                    _la = self._input.LA(1)
                    if not(_la==SignalTemporalLogicParser.TRUE or _la==SignalTemporalLogicParser.FALSE):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 70
                self.match(SignalTemporalLogicParser.SEMICOLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoolExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stlTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SignalTemporalLogicParser.StlTermContext)
            else:
                return self.getTypedRuleContext(SignalTemporalLogicParser.StlTermContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.OR)
            else:
                return self.getToken(SignalTemporalLogicParser.OR, i)

        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.AND)
            else:
                return self.getToken(SignalTemporalLogicParser.AND, i)

        def IMPLIES(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.IMPLIES)
            else:
                return self.getToken(SignalTemporalLogicParser.IMPLIES, i)

        def MISSING(self, i:int=None):
            if i is None:
                return self.getTokens(SignalTemporalLogicParser.MISSING)
            else:
                return self.getToken(SignalTemporalLogicParser.MISSING, i)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_boolExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolExpr" ):
                listener.enterBoolExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolExpr" ):
                listener.exitBoolExpr(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitBoolExpr" ):
                return visitor.visitBoolExpr(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def boolExpr(self):

        localctx = SignalTemporalLogicParser.BoolExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_boolExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self.stlTerm()
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SignalTemporalLogicParser.AND) | (1 << SignalTemporalLogicParser.OR) | (1 << SignalTemporalLogicParser.IMPLIES) | (1 << SignalTemporalLogicParser.MISSING))) != 0):
                self.state = 74
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SignalTemporalLogicParser.AND) | (1 << SignalTemporalLogicParser.OR) | (1 << SignalTemporalLogicParser.IMPLIES) | (1 << SignalTemporalLogicParser.MISSING))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 75
                self.stlTerm()
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StlTermContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def booelanAtomic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SignalTemporalLogicParser.BooelanAtomicContext)
            else:
                return self.getTypedRuleContext(SignalTemporalLogicParser.BooelanAtomicContext,i)


        def U(self):
            return self.getToken(SignalTemporalLogicParser.U, 0)

        def timeBound(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.TimeBoundContext,0)


        def F(self):
            return self.getToken(SignalTemporalLogicParser.F, 0)

        def G(self):
            return self.getToken(SignalTemporalLogicParser.G, 0)

        def MISSING(self):
            return self.getToken(SignalTemporalLogicParser.MISSING, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_stlTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStlTerm" ):
                listener.enterStlTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStlTerm" ):
                listener.exitStlTerm(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitStlTerm" ):
                return visitor.visitStlTerm(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def stlTerm(self):

        localctx = SignalTemporalLogicParser.StlTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_stlTerm)
        self._la = 0 # Token type
        try:
            self.state = 100
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.booelanAtomic()
                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SignalTemporalLogicParser.U:
                    self.state = 82
                    self.match(SignalTemporalLogicParser.U)
                    self.state = 83
                    self.timeBound()
                    self.state = 84
                    self.booelanAtomic()


                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.match(SignalTemporalLogicParser.F)
                self.state = 89
                self.timeBound()
                self.state = 90
                self.booelanAtomic()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.match(SignalTemporalLogicParser.G)
                self.state = 93
                self.timeBound()
                self.state = 94
                self.booelanAtomic()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 96
                self.match(SignalTemporalLogicParser.MISSING)
                self.state = 97
                self.timeBound()
                self.state = 98
                self.booelanAtomic()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TimeBoundContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LE(self):
            return self.getToken(SignalTemporalLogicParser.LE, 0)

        def atomic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SignalTemporalLogicParser.AtomicContext)
            else:
                return self.getTypedRuleContext(SignalTemporalLogicParser.AtomicContext,i)


        def LBRAT(self):
            return self.getToken(SignalTemporalLogicParser.LBRAT, 0)

        def COMMA(self):
            return self.getToken(SignalTemporalLogicParser.COMMA, 0)

        def RBRAT(self):
            return self.getToken(SignalTemporalLogicParser.RBRAT, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_timeBound

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTimeBound" ):
                listener.enterTimeBound(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTimeBound" ):
                listener.exitTimeBound(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitTimeBound" ):
                return visitor.visitTimeBound(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def timeBound(self):

        localctx = SignalTemporalLogicParser.TimeBoundContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_timeBound)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SignalTemporalLogicParser.LE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(SignalTemporalLogicParser.LE)
                self.state = 103
                self.atomic()
                pass
            elif token in [SignalTemporalLogicParser.LBRAT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(SignalTemporalLogicParser.LBRAT)
                self.state = 105
                self.atomic()
                self.state = 106
                self.match(SignalTemporalLogicParser.COMMA)
                self.state = 107
                self.atomic()
                self.state = 108
                self.match(SignalTemporalLogicParser.RBRAT)
                pass
            elif token in [SignalTemporalLogicParser.INTEGER, SignalTemporalLogicParser.FLOAT, SignalTemporalLogicParser.MISSING, SignalTemporalLogicParser.ID]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.atomic()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BooelanAtomicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpr(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.RelationalExprContext,0)


        def LPAR(self):
            return self.getToken(SignalTemporalLogicParser.LPAR, 0)

        def boolExpr(self):
            return self.getTypedRuleContext(SignalTemporalLogicParser.BoolExprContext,0)


        def RPAR(self):
            return self.getToken(SignalTemporalLogicParser.RPAR, 0)

        def TRUE(self):
            return self.getToken(SignalTemporalLogicParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(SignalTemporalLogicParser.FALSE, 0)

        def MISSING(self):
            return self.getToken(SignalTemporalLogicParser.MISSING, 0)

        def NOT(self):
            return self.getToken(SignalTemporalLogicParser.NOT, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_booelanAtomic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooelanAtomic" ):
                listener.enterBooelanAtomic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooelanAtomic" ):
                listener.exitBooelanAtomic(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitBooelanAtomic" ):
                return visitor.visitBooelanAtomic(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def booelanAtomic(self):

        localctx = SignalTemporalLogicParser.BooelanAtomicContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_booelanAtomic)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SignalTemporalLogicParser.NOT:
                self.state = 113
                self.match(SignalTemporalLogicParser.NOT)


            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 116
                self.relationalExpr()
                pass

            elif la_ == 2:
                self.state = 117
                self.match(SignalTemporalLogicParser.LPAR)
                self.state = 118
                self.boolExpr()
                self.state = 119
                self.match(SignalTemporalLogicParser.RPAR)
                pass

            elif la_ == 3:
                self.state = 121
                self.match(SignalTemporalLogicParser.TRUE)
                pass

            elif la_ == 4:
                self.state = 122
                self.match(SignalTemporalLogicParser.FALSE)
                pass

            elif la_ == 5:
                self.state = 123
                self.match(SignalTemporalLogicParser.MISSING)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SignalTemporalLogicParser.AtomicContext)
            else:
                return self.getTypedRuleContext(SignalTemporalLogicParser.AtomicContext,i)


        def EQ(self):
            return self.getToken(SignalTemporalLogicParser.EQ, 0)

        def NEQ(self):
            return self.getToken(SignalTemporalLogicParser.NEQ, 0)

        def GT(self):
            return self.getToken(SignalTemporalLogicParser.GT, 0)

        def LT(self):
            return self.getToken(SignalTemporalLogicParser.LT, 0)

        def GE(self):
            return self.getToken(SignalTemporalLogicParser.GE, 0)

        def LE(self):
            return self.getToken(SignalTemporalLogicParser.LE, 0)

        def MISSING(self):
            return self.getToken(SignalTemporalLogicParser.MISSING, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_relationalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self,parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def relationalExpr(self):

        localctx = SignalTemporalLogicParser.RelationalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_relationalExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.atomic()
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SignalTemporalLogicParser.EQ) | (1 << SignalTemporalLogicParser.NEQ) | (1 << SignalTemporalLogicParser.GT) | (1 << SignalTemporalLogicParser.GE) | (1 << SignalTemporalLogicParser.LT) | (1 << SignalTemporalLogicParser.LE) | (1 << SignalTemporalLogicParser.MISSING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 128
            self.atomic()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomicContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(SignalTemporalLogicParser.INTEGER, 0)

        def FLOAT(self):
            return self.getToken(SignalTemporalLogicParser.FLOAT, 0)

        def ID(self):
            return self.getToken(SignalTemporalLogicParser.ID, 0)

        def MISSING(self):
            return self.getToken(SignalTemporalLogicParser.MISSING, 0)

        def getRuleIndex(self):
            return SignalTemporalLogicParser.RULE_atomic

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtomic" ):
                listener.enterAtomic(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtomic" ):
                listener.exitAtomic(self)

        def accept(self, visitor:ParseTreeVisitor, parentID=None):
            if hasattr( visitor, "visitAtomic" ):
                return visitor.visitAtomic(self, parentID)
            else:
                return visitor.visitChildren(self, parentID)




    def atomic(self):
